# src/index.ts
@@ -4,6 +4,8 @@ import swaggerJsdoc from 'swagger-jsdoc';
 import grades from './routes/notas-estudiante-route';
 import notasMateriaEstudianteRoute from './routes/notas-materia-estudiante-route';
 import  subjectCriteria from './routes/subjectCriteriaroute';
+import addGrade from './routes/addGradesRoute';
+import editGrade from './routes/gradeCriteriaroute';
 import path from 'path';
 
 const app = express();
@@ -31,7 +33,8 @@ app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerSpec));
 app.use('/api/grades',grades)
 app.use('/api', notasMateriaEstudianteRoute);
 app.use('/api/criteria', subjectCriteria);
-
+app.use('/api/add-grade', addGrade);
+app.use('/api/edit-grade', editGrade);
 
 app.listen(PORT, () => {
   console.log(`🚀 Servidor corriendo en http://localhost:${PORT}`);
