# src/routes/addGradesRoute.ts
@@ -1,0 +1,8 @@
+import {Router} from "express";
+import {createGrade} from "../controller/addGradesController";
+
+const router=Router();
+
+router.post('/',createGrade);
+
+export default router;
